--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
+    "sourceMap": false,
     "strict": true,
     "target": "es6",
     "module": "commonjs",
