--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/pg": "^7.14.11",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "pg": "^8.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
